Thu Jul 26 16:55:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_table.cc: Change STRINGIZE to om_tostring()
	  in error message about a key which is too long; STRINGIZE doesn't
	  work since FLINT_BTREE_MAX_KEY_LEN is no longer a preprocessor
	  constant - it's a C++ constant; before this change, the error
	  message contained the literal text "FLINT_BTREE_MAX_KEY_LEN".

Tue Jul 17 12:20:55 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h: Add a
	  MultipleMatchDecider, which calls a list of deciders in order,
	  until one returns false.
	* include/xapian/enquire.h: Expand comment to say which way round
	  the return values of the MatchDecider operator are.
	* tests/api_db.cc: Add test_matchfunctor3() to test the
	  MultipleMatchDecider - also tests the ValueCountMatchSpy,
	  incidentally.

Tue Jul 17 11:10:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h: Make
	  get_most_frequent_items() private, since I'm not convinced it's
	  useful to make it available externally.  We can always make it
	  public again if it's useful to do so.
	* test/api_wrdb.cc: Update tests accordingly.

Sat Jul 14 00:17:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h: Get rid of the
	  TopValueMatchSpy in favour of a new function
	  "get_most_frequent_items", which processes the output of a
	  ValueCountMatchSpy.  Add a TermCountMatchSpy which counts the
	  occurrences of terms with a given prefix, and gives output in
	  the same form as ValueCountMatchSpy.  Add convenience methods
	  ValueCountMatchSpy::get_top_values() and
	  TermCountMatchSpy::get_top_terms() which use this to return the
	  most frequent items seen by the matchspy.
	* tests/api_wrdb.cc: Test the ValueCountMatchSpy, and the
	  get_most_frequent_items() function.
