@@ -1,3 +1,13 @@
+Fri Aug 03 19:53:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* api/matchspy.cc,include/xapian/matchspy.h: Add StringListSerialiser
+	  and StringListUnserialiser classes which can be used to serialise
+	  a list of strings into a single string.  Add flag to
+	  ValueCountMatchSpy to use this to unserialise the values read
+	  from the database into multiple strings, allowing several values
+	  to be stored for a particular slot in a database: this allows
+	  multiple values of a particular facet to be stored.
+
 Thu Jul 26 16:55:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* backends/flint/flint_table.cc: Change STRINGIZE to om_tostring()
